--- a/style.css
+++ b/style.css
@@ -557,7 +557,7 @@ body {
 
 .container-eleventh #font a {
   text-decoration: none;
-  color: rgba(0, 0, 0, .5);;
+  color: rgba(0, 0, 0, .5);
 }
 
 .container-twelfth {
